Fix too big logotype

--- a/page/main.scss
+++ b/page/main.scss
@@ -68,7 +68,7 @@ ul,ol {
         font-family: 'Parallax',monospace;
         top: 70px;
         left: 100px;
-        font-size: 50px;
+        font-size: 40px;
         color: #fff;
         print-color-adjust: exact;
         -webkit-print-color-adjust: exact;
